tests/netedit/basic/configs/netecfg/load/invalid/meandatas/errors.netedit
Error: Cannot read file 'dummy.med.add.xml'!
Error: Loading of dummy.med.add.xml failed.
